Fix datatable layout breaking at smaller screen sizes
- Set fixed percentage sizes for job status and cluster
- Enable word wrap for job name

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@
 
 .table {
   width: 100%;
-  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 .panel-thin {
